--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h2 class="text-primary font-weight-bold">
     Danh sách nhân viên
   </h2>
-  <button type="button" class="btn btn-primary ml-auto pt-2 pb-2 h-100" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Thêm nhân viên</button>
+  <button type="button" class="btn btn-primary ml-auto pt-2 pb-2 h-100 changeToEnable" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Thêm nhân viên</button>
 </div>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
